update html and js file

--- a/1.html
+++ b/1.html
@@ -62,6 +62,9 @@
                  <div class="col-md-2 mt-1">
                        <button class="btn btn-light btn-outline-success btn-block" onclick="submit()">Search</i></button>
                  </div>
+                 <div class="error" style="margin-top: 2px; color: red;">
+
+                 </div>
            </div>
            <div class="row bg-dark text-white justify-content-center align-items-center mt-3">
                   <div class="col-md-1 ml-2 mr-2 mb-2 rounded-pill d-flex justify-content-center align-items-center bg-success " style="height: 30px; background:rgb(215, 166, 166);" >GIFs</div>
