update html file

--- a/1.html
+++ b/1.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="container-fluid bg-dark" style="height: 100vh;">
-           <div class="row align-items-center " style="background: black; height:60px;">
+           <div class="row align-items-center sticky-top " style="background: black; height:60px;">
                    <div class="col-12">
                         <div class="row">
                             <div class="col-10 d-flex align-items-center">
