--- a/1.html
+++ b/1.html
@@ -60,7 +60,7 @@
                      <input type="text" class="form-control" placeholder="Search all the Gift and Stickers" id="textinput">
                  </div>
                  <div class="col-md-2 mt-1">
-                       <button class="btn btn-light btn-outline-success btn-block" >Search</i></button>
+                       <button class="btn btn-light btn-outline-success btn-block" onclick="submit()" >Search</i></button>
                  </div>
                  <div class="error" style="margin-top: 2px; color: red;">
 
