--- a/1.html
+++ b/1.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="container-fluid bg-dark" style="height: 100vh;">
-           <div class="row align-items-center sticky  " style="background: black; height:60px;">
+           <div class="row align-items-center sticky-top  " style="background: black; height:60px;">
                    <div class="col-12">
                         <div class="row">
                             <div class="col-10 d-flex align-items-center">
@@ -55,21 +55,23 @@
                         </div>
                    </div>
            </div>
-           <div class="row bg-dark justify-content-center align-items-center mb-2 mt-2">
+           <div class="row bg-dark justify-content-center align-items-center mt-2">
                  <div class="col-md-5">
                      <input type="text" class="form-control" placeholder="Search all the Gift and Stickers" id="textinput">
                  </div>
                  <div class="col-md-2 mt-1">
                        <button class="btn btn-light btn-outline-success btn-block" onclick="submit()" >Search</i></button>
                  </div>
-                 <div class="error" style="margin-top: 2px; color: red;">
+           </div>
+           <div class="row justify-content-center align-items-center mb-2 mt-1">
+            <div class="col error d-flex justify-content-center align-items-center" style="margin-top: 2px; color: red; height: 12px;">
 
-                 </div>
+            </div>
            </div>
             <div class="row bg-dark text-white justify-content-center align-items-center mt-3">
                   <div class="col-md-1 ml-2 mr-2 mb-2 rounded-pill d-flex justify-content-center align-items-center bg-success " style="height: 30px; background:rgb(215, 166, 166);" >GIFs</div>
                   <div class="col-md-1 ml-2 mr-2 mb-2 rounded-pill d-flex justify-content-center align-items-center shadow" style="height: 30px; background:rgb(46, 5, 5);"onclick="sticker1('sticker')">Stickers</div>
-                  <div class="col-md-1  ml-2 mr-2 mb-2 rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive" onclick="sticker1('happ')">#happ</div>
+                  <div class="col-md-1  ml-2 mr-2 mb-2 rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"onclick="sticker1('trending')">#trending</div>
                   <div class="col-md-1  ml-2 mr-2  mb-2   rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive" onclick="sticker1('happiness')">#happiness</div>
                   <div class="col-md-1  ml-2 mr-2  mb-2   rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"onclick="sticker1('joy')">#joy</div>
                   <div class="col-md-1  ml-2 mr-2  mb-2   rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"onclick="sticker1('smile')">#smile</div>
@@ -79,13 +81,15 @@
                   <div class="col-md-2  ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center "id="hover" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive;"onclick="sticker1('birthdaywishes')">#birthday_wishes</div>
                 </div>
             <div class="row bg-dark justify-content-center align-items-center text-white">
-                <div class="col-md-1 ml-2 mr-2  mb-2   rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"onclick="sticker1('trending')">#trending</div>
+                <div class="col-md-1 ml-2 mr-2  mb-2   rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"onclick="sticker1('happ')">#happ</div>
                 <div class="col-md-1 ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"  onclick="sticker1('viral')">#viral</div>
                 <div class="col-md-1  ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center "id="hover" style="height: 30px; background:rgb(46, 5, 5); font-family: cursive" onclick="sticker1('news')">#news</div>
                 <div class="col-md-2  ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center "id="hover" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive;" onclick="sticker1('dailynews')">#daily_news</div>
                 <div class="col-md-1 ml-2 mr-2  mb-2   rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"onclick="sticker1('roleplay')">#role_play</div>
                 <div class="col-md-1 ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"  onclick="sticker1('sadness')">#sadness</div> 
                 <div class="col-md-1  ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center "id="hover" style="height: 30px; background:rgb(46, 5, 5); font-family:cursive" onclick="sticker1('forums')">#forums</div>
+                <div class="col-md-1 ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center d" style="height: 30px; background:rgb(46, 5, 5);font-family: cursive"  onclick="sticker1('emoji')">#emoji</div> 
+                <div class="col-md-1  ml-2 mr-2  mb-2  rounded-pill d-flex justify-content-center align-items-center "id="hover" style="height: 30px; background:rgb(46, 5, 5); font-family:cursive" onclick="sticker1('text')">#text</div> 
             </div>
           <div class="row justify-content-center align-items-center mt-0 bg-dark text-black">
             <div class="col-md-6  ml-2 mr-2  mb-2 d-flex justify-content-center align-items-center " id="name" style="background:linear-gradient(white, yellow,black);width: 500px;visibility:hidden;width: 500px; height:50px;font-size:30px;font-weight: bold;font-family: cursive;">Name</div>
